--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Example project to set up a javascript development environment using webpack",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/notlfish/webpack-example#readme",
   "devDependencies": {
+    "html-webpack-plugin": "^5.3.2",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.8.0"
   },
